# crud-endpoints

./: README.md
app/: .gitignore  pyproject.toml
app/crudendpoints/: db.sqlite3  manage.py
app/crudendpoints/crudapp/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
app/crudendpoints/crudapp/migrations/: 0001_initial.py  0002_alter_customer_birth.py  0003_alter_address_flat_alter_address_house_and_more.py  0004_alter_address_person_alter_emailphone_person.py
app/crudendpoints/crudapp/static/: styles.css
app/crudendpoints/crudapp/templates/: create.html  customerdetail.html  homepage.html  layout.html  listcustomers.html  message.html  update.html
app/crudendpoints/crudapp/tests/: test_models.py  test_views.py
app/crudendpoints/crudendpoints/: asgi.py  settings.py  urls.py  wsgi.py
