[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Anna Shcherenko"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "4.0.2"
black = "^23.3.0"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
